fixed mobile nav scrolling issue on safari
the user isn't supposed to be able to scroll down the page whilst the mobile nav menu is open;
this fixes the issue for safari, however this is still an issue for chrome

--- a/web/app/themes/ppj/src/sass/components/mobile-nav.sass
+++ b/web/app/themes/ppj/src/sass/components/mobile-nav.sass
@@ -154,4 +154,4 @@ $mobileNavWidthPortrait: 48rem
 
 .mobile-nav-is-open
   height: 100vh
-  overflow-y: hidden
+  overflow: hidden
